# PW02

./: AddressBook.py  Bot.py  Personal Assistant.drawio  README.md  __main__.py  dockerfile  info.py  logs.txt  pyproject.toml
