[tool.poetry]
name = "personal assistant"
version = "0.1.0"
description = "this is personal assistant for help in user's contacts"
authors = ["not my"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
